# school_tg_bot

./: .env.example  .gitignore  LICENSE  Parser_school.py  README.md  Start tg bot.cmd  Start_tg_bot.cmd  __main__.py  auth.py  get_token.py  main.py  pyproject.toml  requirements.txt  schedule.json
DataBase/: DataBase_sqlite.py  __init__.py  crud.py  database.py
DataBase/models/: __init__.py  homework_week_model.py  lesson_model.py  study_day_model.py  user_model.py
app/: window.py
bot/: .env.example  Start_tg_bot.cmd  config.py
bot/classes/: BaseDate.py  DataBase.py  Homework.py  Parser.py  UserClass.py  __init__.py  homework.py  parser.py  serialization_mixin.py  user_class.py
bot/filters/: IsAdmin.py  __init__.py  is_admin.py
bot/handlers/: __init__.py  data_get.py  debug.py  registration.py  settings.py  unknown.py
bot/middlewares/: LogMiddleware.py  TokenMiddleware.py  UserMiddleware.py  __init__.py  log_middleware.py  token_middleware.py  user_middleware.py
bot/until/: KeyBoards.py  __init__.py  exceptions.py  get_token.py  get_weekday.py  keyboard.py  logger.py
classes/: BaseDate.py  Exceptions.py  UserClass.py  __init__.py
database/: crud.py
docs/: get_token.md  main.md  parser_school.md
filters/: is_admin.py
handlers/: __init__.py  debug.py  registration.py  unknown.py
until/: BaseDate.py  Exceptions.py  KeyBoards.py  __init__.py  get_token.py
