[project]
name = "school-tg-bot"
version = "0.2.0"
description = "Telegram bot for school"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "aiogram==3.24.0",
    "aiosqlite>=0.21.0",
    "colorama~=0.4.6",
    "coverage==7.8.2",
    "environs==14.2.0",
    "loguru~=0.7.2",
    "pydantic-settings>=2.12.0",
    "requests~=2.32.3",
    "sqlalchemy>=2.0.46",
]

[tool.pyright]
typeCheckingMode = "standard"
reportMissingImports = "error"
reportIncompatibleMethodOverride = "none"
reportOptionalMemberAccess = "none" # because of the aiogram specificity

[tool.ruff]
line-length = 100
indent-width = 4


[tool.ruff.lint]
select = ["D", "I", "N", "PERF"]
ignore = ["D101", "D102", "D103", "D104", "D105", "D107", "D100"]
pydocstyle.convention = "google"


[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
